<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tea"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_t1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/t1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_t2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/t2"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_t3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/t3"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_t4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/t4"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tea"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_m1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/m1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_m2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/m2"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_m3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/m3"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_m4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/m4"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wm"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_w1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/w1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_w2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/w2"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_w3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/w3"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_w4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/w4"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/recommend"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_r1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/r1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_r2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/r2"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_r3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/r3"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_r4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/r4"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_r5"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left|center_vertical"
                android:onClick="drinkClick"
                android:text="@string/r5"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/img_background" />

    <Button
        android:id="@+id/btn_goCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="go_shopping_cart"
        android:text="@string/str_goCart"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>